# network_service

./: .gitignore  README.md
collector/: Cargo.toml
collector/src/: main.rs
server/: Cargo.toml
server/migrations/: 20240330202648_initial.sql
server/src/: collector.html  collector.rs  index.html  main.rs
shared_data/: Cargo.toml
shared_data/src/: lib.rs
