[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
dotenv = "0.15.0"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
shared_data = { path = "../shared_data/" }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = "1.8.0"
